# dotorphan

./: .gitignore  README.md  _dotorphan  entry_points.cfg  setup.cfg
dotorphan/: __init__.py  _dotorphan  dotorphan.py  sample.dot
examples/: README.md  class.3.8.0.ll  class.4.0.1.ll  class.5.0.0.ll  class.6.0.0.ll  class.6.0.1.ll  class.7.1.0.ll  class.8.0.1.ll  class.9.0.0.ll  class.cpp  comp_llvm_version.sh  main.cpp  main.hpp  sub.cpp  sub.hpp
examples/oss/: README.md  cxxopts.patch  enable_clang_flto.cmake
