[metadata]
name = dotorphan
version = 0.0.1
description = dotorphan: find orphan graph from dot file
url = https://github.com/umaumax/dotorphan
author = umaumax
author_email = umauma7083@gmail.com
license = MIT
long_description = file: README.md

[options]
zip_safe = False
install_requires =
  argparse
  graphviz
  networkx
# pygraphviz
packages = find:
entry_points = file: entry_points.cfg

[options.packages.find]
exclude = tests
